# Annal

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  .yamlfmt  LICENSE  Makefile  README.md  config.json  go.mod  go.sum  install.py  migrations
.github/workflows/: ci.yaml  codeql.yml
algorithm/polygon/: README.md  main.cpp  ploygon.cpp  ploygon.h
appc/gdbinit/: .gdbinit
appc/omz/: .zshrc
appc/tmux/: .tmux.conf
appc/vim/: .vimrc
appc/vscode/: settings.json
appc/xterm/: .Xresources
binaries/: .gitignore  Makefile  README.md  go.mod  go.sum
binaries/notify/: at.go
binaries/pb/: Makefile  serve.proto  todotask.proto  word.proto
binaries/rtc/: engine.go  peer.go  pub.go  rtc.go  track.go
binaries/storage/: migrate.go  storage.go  storage_test.go  tables.go  todo.go  word.go  word_test.go
binaries/todo/: create.go  create_test.go  done.go  fetch.go  list.go  prune.go  statistic.go  table.go
binaries/utils/: pair.go
binaries/version/: version.go
cmd/annal/: root.go  version.go  video.go
configs/: .gitignore  .jtremotes.local  .p10k.zsh  .tmux.conf.local  CET4.csv  env.rc
configs/kitty/: .gitignore  current-theme.conf  custom-hints.py  (+13 more)
envs/: Dockerfile.pb.builder  Makefile
rcs/: .aliases  .bashrc  .envrc  .profile  .vimrc  .zshenv  .zshrc
samples/cpp/cmake/: .gitignore  CMakeLists.txt  README.md
samples/cpp/cmake/src/: main.cpp
scripts/: 60-my-welcome-info  android-input-dictionary-scel-to-gboard.sh  background.sh  docker-wechat.sh  docker-wechat.work.sh  github-pub.sh  jesus.sh  jt.sh  notify-send.sh  qr-scan.sh
(+115 files in other folders)
