CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(CppSample)
MESSAGE(STATUS "this is a cpp sample")

SET(DEBUG true)
SET(CMAKE_CXX_STANDARD 11)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/.cmake)
INCLUDE(utils)

list_dirs(${CMAKE_CURRENT_SOURCE_DIR} DIRS)
FOREACH(dir IN LISTS DIRS)
    MESSAGE(STATUS "subdir: " ${dir})
ENDFOREACH()

list_dirs_recursive(${CMAKE_CURRENT_SOURCE_DIR} RDIRS)
FOREACH(dir IN LISTS RDIRS)
    MESSAGE(STATUS "recursive subdir: " ${dir})
ENDFOREACH()

# 添加头文件目录
include_dirs_recursive(${CMAKE_CURRENT_SOURCE_DIR}/include)

list_files(${CMAKE_CURRENT_SOURCE_DIR}/src FILES)
FOREACH(file IN LISTS FILES)
    MESSAGE(STATUS "file: " ${file})
ENDFOREACH()

list_files_recursive(${CMAKE_CURRENT_SOURCE_DIR}/src RFILES)
FOREACH(file IN LISTS RFILES)
    MESSAGE(STATUS "recursive file: " ${file})
ENDFOREACH()

ADD_EXECUTABLE(${PROJECT_NAME} ${RFILES})
